# douki_c_programs

./: .gitignore  2chplay.c  2chplay2.c  CMakeLists.txt  FC_deviation.c  FC_deviation_alter.c  FFT_ho.c  FileLib_osx.c  IMPmcode.c  LE_1.c  LICENSE  Makefile  README.md  Rev_sup.c  WAVtoDSB.c  WAVtoDSB_osx  WAVtoDSB_osx.c  biascut.c  build.mk  calc_ILD.c  calc_ITD.c  closed_loop_new.c  cosine_windowing.c  cutout_anyfile.c  cutout_anyfile2.c  douki_new.c  dv.c  equ_schroeder1.c  equ_schroeder2.c  equ_schroeder3.c  equ_schroeder4.c  equ_schroeder5.c  fadein_fadeout_fourier.c  fatchdb.c  fff.c  fft.c  fftout2.c  fftout3.c  fftout4.c  find_cutpoint.c  (+31 more)
.github/: build.yml
common/: CMakeLists.txt
common/src/: FC_deviation.c  FC_deviation_alter.c  IMPmcode.c  Rev_sup.c  biascut.c  cosine_windowing.c  cutout_anyfile.c  cutout_anyfile2.c  douki_new.c  dv.c  equ_schroeder1.c  equ_schroeder2.c  equ_schroeder3.c  equ_schroeder4.c  equ_schroeder5.c  fatchdb.c  fff.c  find_cutpoint.c  henkan.c  ifft.c  imp_add.c  imp_add_by10.c  inverse.c  linear_inpo_hrir_using_ATD.c  mono2LR.c  peaking_filter.c  print_siglen.c  random.c  scaling_max_instant_amp.c  sepach.c  sinwave.c  timeconvo.c  unbias.c  zeropad_anyfile.c
fftcpp/: Array2D.cpp  Array2D.h  Makefile  fft.cpp  fft.h  fft_hardcord.h  fft_hardcorder.cpp  fft_test.cpp
fftw/: CMakeLists.txt
fftw/src/: fftout2.c  fftout3.c  fftout4.c  make_whitenoise.c
include/: FileLib_osx.c  FileLib_osx.h
include/umasig/: plot.c  umasig.h  utils.c  window.c
non-use/: WAVtoDSB.c
non-use/umasig/: fftfilt.c
portaudio/: CMakeLists.txt
portaudio/src/: 2chplay.c  2chplay2.c  closed_loop_new.c  monoplay.c  monoplay2.c  monoplay_48k.c  monoplay_8kHz.c  monoplay_alter.c  monorecord.c  playrec_2ch_inPath.c  playrec_2ch_new_kai.c  playrec_mono.c  playrec_mono_inPath.c  playrec_multi.c
umasig/: c_vector.c  complex.c  conv.c  fft.c  fftfilt.c  plot.c  random.c  speech.c  umasig.h  utils.c  vector.c  window.c
